Updated Many Processes, Service, and more, and Documentation
