# app/Controllers/BaseController.php
@@ -2,7 +2,7 @@
 
 namespace App\Controllers;
 
-use App\Models\Response\DataResponse;
+use App\Models\Response\ClientListResponse;
 use Koine\QueryBuilder\Statements\Select;
 
 /**
@@ -20,16 +20,22 @@ abstract class BaseController
     /**
      * List Process.
      *
-     * @param string $modelName
      * @param array|object|null $list
+     * @param object|callable $callback
      */
-    public function list(string $modelName = null, $list = null)
+    public function list($list = null, $callback = null)
     {
-        $data = is_array($list) ? array_map(function ($model) use ($modelName) {
-            return $model->{$modelName};
+        $data = is_array($list) ? array_map(function ($model) {
+            return $model->document;
         }, $list) : [$list];
 
-        response()::setResponseModel(200, new DataResponse(), ['values' => $data]);
+        if (is_callable($callback)) {
+            $callback($data);
+
+            return;
+        }
+
+        response()::setResponseModel(200, new ClientListResponse(), array('clients' => $data));
     }
 
     /**
@@ -42,6 +48,12 @@ abstract class BaseController
     protected function filter(Select $query = null)
     {
         $query = $query == null ? new Select() : $query;
+
+        if (request()::query('id') !== false) {
+            $query->where('META(document).id', request()::query('id'));
+
+            return $query;
+        }
 
         if (request()::query('tags') !== false) {
             array_walk(explode(':', request()::query('tags')), function ($tag) use ($query) {
